# probe_design

./: .gitignore  HUSH_feedback.py  LICENSE  README.md  ROADMAP.MD  __init__.py  build-db.sh  build-db_BL.sh  build-db_cc.sh  cycling_query.py  deneme.py  escafish_score.py  exclude_region.py  generate_blacklist.sh  generate_exclude.py  get_oligos.py  get_ref_genome.sh  melt_secs_parallel.sh  pipeline.sh  pipeline_exclude.sh  plot_probe_candidates.ipynb  prepare_input.r  probe-query.sh  pyproject.toml  reform_hush.py  reform_hush_combined.py  reform_hush_consec.py  run_nHUSH.sh  run_nHUSH_excl.sh  run_pd.py  select_probe.py  split_fasta.py  summarize-probes-cumul.py  summarize-probes-final.py  summarize-probes.py  unfinished_HUSH.sh  validation_oldHUSH_BLAST.sh
data/exclude/: excl_roi_10.bed  excl_roi_11.bed  excl_roi_2.bed  excl_roi_3.bed  excl_roi_4.bed  excl_roi_7.bed
data/rois/: DNA_RNA_FISH_template.ods  df_DNA_FISH.txt
ifpd2/: database.py  io.py  logging.py
ifpd2/scripts/: autocomplete.py  extract_kmers.py
ifpd2/scripts/db/: __init__.py  dump.py  run.py
ifpd2_new/: CODE_OF_CONDUCT.md  README.md  pyproject.toml
ifpd2_new/ifpd2/: __init__.py  asserts.py  const.py  probe.py  region.py
ifpd2_new/ifpd2/scripts/: arguments.py  extract_kmers.py  query.py  query2.py
ifpd2_new/ifpd2/scripts/db/: check.py  info.py  make.py
ifpd2_new/ifpd2/tests/: test_scripts_db.py
ifpd2_new/test_data/: test.dump.txt  test.ss.ct
ifpd2_new/test_data/test_db/: db.pickle
notebooks/: plot_oligos.ipynb  plot_probes.ipynb
prbdes/: main.py
prbdes/data/exclude/: excl_roi_6.bed
prbdes/data/rois/: df_DNA_RNA_FISH.txt
prbdes/shell/: build-db.sh  build-db_BL.sh  build-db_cc.sh
prbdes/src/: cycling_query.py  exclude_region.py  get_oligos.py  split_fasta.py
probe_design/: __init__.py  main.py
probe_design/data/exclude/: excl_roi_1.bed  excl_roi_12.bed  excl_roi_5.bed  excl_roi_8.bed  excl_roi_9.bed
probe_design/data/rois/: DNA_FISH_template.ods  RNA_FISH_template.ods  all_regions.tsv  df_RNA_FISH.txt
probe_design/ifpd2_new/: CHANGELOG.md  CONTRIBUTING.md  LICENSE
probe_design/ifpd2_new/docs/: _config.yml  index.md
probe_design/ifpd2_new/ifpd2/: __init__.py  chromosome.py  database.py  dataclasses.py  fasta.py  io.py  oligo.py  probe.py  probe_set.py  region.py  walker.py  walker2.py
probe_design/ifpd2_new/ifpd2/scripts/: __init__.py  autocomplete.py  extract_kmers.py  ifpd2.py  query.py  query2.py
probe_design/ifpd2_new/ifpd2/tests/: __init__.py
probe_design/ifpd2_new/test_data/: test.hush.fa  test.tm.tsv
probe_design/notebooks/: plot_oligos.ipynb  plot_probe_candidates.ipynb  plot_probes.ipynb
probe_design/shell/: build-db.sh  build-db_BL.sh  build-db_cc.sh  genome_upper.sh  get_T2T.sh  makedirs.sh  melt_secs_parallel.sh  pipeline.sh  pipeline_exclude.sh  probe-query.sh  ref2upper.sh  run_nHUSH.sh  run_nHUSH_excl.sh  show.sh  test_shell.sh  validation_oldHUSH_BLAST.sh
probe_design/src/: HUSH_feedback.py  __init__.py  cycling_query.py  cycling_query_new.py  download_chromosomes.py  ensemble.py  escafish_score.py  escafish_score_new.py  escafish_score_old.py  exclude_region.py  generate_exclude.py  get_GRC.py  get_latest_ensemle.ipynb  get_oligos.py  reform_hush.py  reform_hush_combined.py  reform_hush_combined_new.py  reform_hush_consec.py  select_probe.py  split_GRC.py  split_T2T.py  split_T2T_old.py  split_fasta.py  summarize_probes.py  summarize_probes_cumul.py  summarize_probes_final.py  test.py
shell/: apply_blacklist.sh  get_ref_genome.sh  pipeline_exclude.sh
src/: cycling_query.py  escafish_score.py  exclude_region.py  generate_exclude.py  get_oligos.py  reform_hush.py  reform_hush_consec.py  select_probe.py  summarize_probes.py  summarize_probes_cumul.py
tests/: EDA.ipynb  final_probes_summary.tsv  visual_report.py
(+7 files in other folders)
