[tool.poetry]
name = "prbdes"
version = "0.1.2"
description = "Probe design originails for FISH by Quentin Verron"
authors = ["Quentin Verron"]
maintainers = [
    "Quentin Verron",
    "Zafer Kosar <zafermolbio.gmail.com>"]
license = "CC NC BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20"
pandas = ">=1.2.2, <3.0"
tabulate = "^0.9.0"
biopython = "^1.82"
tqdm = "^4"
joblib = "^1"
click = "^8.1.0"
poetry = "^1.5"
requests = "^2.31.0"
ifpd2q = "^1.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"

[tool.poetry.scripts]
prbdes = "prbdes.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
