[tool.poetry]
name = "probe-design"
version = "0.2.45"
description = "Probe design for FISH by Quentin Verron"
authors = ["Quentin Verron"]
maintainers = [
    "Quentin Verron <quentin.verron@ki.se>",
    "Zafer Kosar <zafermolbio@gmail.com>",
]
license = "CC NC BY 4.0"
readme = "README.md"
repository = "https://github.com/qverron/probe_design"
keywords = ["FISH", "probe", "design", "bioinformatics"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20"
pandas = ">=1.2.2,<3.0.0"
tabulate = "^0.9.0"
biopython = "^1.82"
tqdm = "^4"
joblib = "^1"
click = "^8.1.0"
poetry = "^1.5"
requests = "^2.31.0"
ifpd2q = "^1.0.3"
beautifulsoup4 = "^4.12.3"
polars = "^0.20.30"
lets-plot = "^4.3.2"
cairosvg = "^2.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
ipykernel = "^6.29.4"

[tool.poetry.scripts]
prb = "probe_design.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
