[tool.poetry]
name = "ifpd2"
version = "1.0.1a1"
description = "An iFISH probe design pipeline (II)"
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/ifpd2"
repository = "https://github.com/ggirelli/ifpd2"
keywords = ["biology", "cell", "DNA", "RNA", "FISH", "fluorescence", "hybridization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
	"License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]
include = [
	"CHANGELOG.md",
	"LICENSE",
    "test_data"
]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.79"
click = "^8.0.1"
numpy = "^1.20.1"
pandas = "^1.2.2"
rich = ">=9.10,<11.0"
tqdm = "^4.58.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[tool.vulture]
paths = ["ifpd2"]
min_confidence = 80
verbose = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"ifpd2" = "ifpd2.scripts.ifpd2:main"
"ifpd2-autocomplete" = "ifpd2.scripts.autocomplete:main"
